--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
         <div class="w-full max-w-2xl">
             <!-- 输入框和图标 -->
             <div class="relative flex items-center mb-4">
-                <img src="/static/favicon.png" alt="芝士猫图标" class="w-8 h-8 mr-2">
+                <img src="favicon.png" alt="芝士猫图标" class="w-8 h-8 mr-2">
                 <input type="text" 
                        id="url" 
                        class="w-full px-4 py-3 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent pr-12"
